kubernetes/java-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-service
  template:
    metadata:
      labels:
        app: java-service
    spec:
      containers:
      - name: java-service
        image: bastien707/phone_image:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  selector:
    app: java-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
