kubernetes/python-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-service
  template:
    metadata:
      labels:
        app: python-service
    spec:
      containers:
      - name: python-service
        image: joel22222/order_image:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
